# backRecomendadorCreditoColsubsidio

./: CONTEXT.md  main.py  pyproject.toml  render.yaml  requirements.txt  schemas.py
components/: afiliado.py  afinidad_producto.py  producto_financiero.py  recomendacion.py  recomendacion_servicio.py
data/: Afiliados_Servicios_y_Canales_Sinteticos_Colsubsidio.xlsx  Afiliados_Sinteticos_Colsubsidio_2000(Afiliados).csv
services/: calculadora_afinidad_productos.py  motor_recomendacion.py  recomendador_servicios.py  repositorio_afiliados.py  repositorio_uso_servicios.py
services/reglas/: __init__.py  base.py  pesos_comunes.py  regla_credito_educativo.py  regla_credito_hipotecario.py  regla_credito_mujer.py  regla_cupo_credito.py
tests/: conftest.py  test_api.py  test_calculadora_afinidad_productos.py  test_lector_datos.py  test_motor_recomendacion.py  test_recomendador_servicios.py  test_reglas_producto.py  test_repositorio_uso_servicios.py
utils/: lector_datos.py  lector_ids.py  lector_servicios.py
