[project]
name = "recomendador-credito-colsubsidio"
version = "0.1.0"
description = "Backend que recomienda productos financieros de Colsubsidio a partir del perfil de un afiliado."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["components*", "services*", "utils*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
